Statics pages for login, role-select, registration

--- a/template/footer.html
+++ b/template/footer.html
@@ -1,5 +1,6 @@
-<footer class="bg-dark text-white mt-5">
-    <div class="text-center py-3">
-      <p class="mb-0">© 2024 Skill House Service. All Rights Reserved.</p>
+  <!-- Footer Section -->
+  <footer class="bg-dark text-white text-center py-4 ">
+    <div class="container">
+        <p class="mb-0">© 2024 My Website. All rights reserved.</p>
     </div>
-  </footer>
+</footer>
