Upload profile images and save it to server

--- a/static/css/registration.css
+++ b/static/css/registration.css
@@ -5,3 +5,12 @@
 .text-success{
     text-decoration: underline;
 }
+
+.avatar {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover; /* Ensure the image fits properly */
+    border: 2px solid #ddd; /* Optional border */
+    margin-bottom: 15px; /* Space between image and input */
+}
