--- a/template/base.html
+++ b/template/base.html
@@ -9,14 +9,14 @@
     {% block extra_css %}{% endblock %}
 </head>
 <body>
-    
     {% block content %} {% endblock %}
     
     <!-- Bootstrap JS and dependencies -->
-    <script scr="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="{{url_for('static', filename= 'js/main.js')}}"></script>
+
 
     
 </body>
