--- a/template/home.html
+++ b/template/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+<!-- {% extends 'base.html'%}
 
 {%block title %} Login {% endblock %}
 
@@ -12,5 +12,5 @@
     Hi Home
 </div>
 
-{% endblock %}
+{% endblock %} -->
 
