--- a/template/messages.html
+++ b/template/messages.html
@@ -9,3 +9,18 @@
         </div>
     {% endif %}
 {% endwith %}
+
+
+
+<!-- {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for category, message in messages %}
+            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endwith %} -->
