--- a/template/registration.html
+++ b/template/registration.html
@@ -10,14 +10,25 @@
 {% block content %} 
 {% include 'nav.html'%}
     <div class="container reg">
+        {%include 'messages.html'%}
         <div class="row justify-content-center mt-3">
             <div class="col-md-8">
-                {%if  user_role == 'professional'%}
+                {%if  session['reg_user_role'] == 'professional'%}
                     <h2 class="text-center fw-lighter">Sign Up to find work</h2>
                 {%else%}
                     <h2 class="text-center fw-lighter">Sign Up to book a service</h2>
                 {%endif%}
-                <form class="mt-4">
+                <form class="mt-4" action={{url_for('registration')}} method="post" enctype="multipart/form-data">
+
+                    <div class="form-group text-center">
+                        <label for="profileImage">Upload Profile Image</label>
+                        <br>
+                        <img id="avatarPreview" class="avatar" src="static\images\default-user.jpg" alt="Profile Avatar">
+                        
+                        <input type="file" class="form-control-file mt-2" id="profileImage" name="profileImage" accept="image/*" onchange="previewAvatar()">
+                        <small class="form-text text-muted">Please upload a profile image (jpg, png, jpeg).</small>
+                    </div>
+
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="firstName">First Name</label>
@@ -44,16 +55,15 @@
                         <input type="password" name="cpassword" class="form-control" id="cpassword" placeholder="Re-enter your password">
                     </div>
 
-                    {%if  user_role == 'professional'%}
-
+                    {%if  session['reg_user_role'] == 'professional'%}
                         <div class="form-group">
                             <label for="serviceType">Service Type <span class="text-danger">*</span></label>
                             <select class="form-control" name="serviceType" id="serviceType" name="service_type" required>
                                 <option value="" disabled selected>Select a service type</option>
-                                <option value="plumbing">Plumbing</option>
-                                <option value="electrical">Electrical</option>
-                                <option value="carpentry">Carpentry</option>
-                                <option value="cleaning">Cleaning</option>
+                                <option value="1">Plumbing</option>
+                                <option value="2">Electrical</option>
+                                <option value="3">Carpentry</option>
+                                <option value="4">Cleaning</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -61,8 +71,9 @@
                             <input type="number" name="experience" class="form-control" id="experience" name="experience" min="0" placeholder="Enter your years of experience" required>
                         </div>
                         <div class="form-group">
-                            <label for="profilePhoto">Upload your resume</label>
-                            <input type="file" name ="resume" class="form-control-file" id="profilePhoto" name="profile_photo" accept="image/*" required>
+                            <label for="resume">Upload your resume</label>
+                            <input type="file" name ="resume" class="form-control-file" id="resume" accept="application/pdf" required>
+                            <small class="form-text text-muted">Please upload your resume (pdf only).</small>
                         </div>
                     {% endif %}
 
@@ -78,8 +89,9 @@
 
                     <div class="form-group">
                         <label for="pincode">Enter Pin Code:</label>
-                        <input type="text" name="pinCode" id="pincode" class="form-control" name="pincode" pattern="\d{6}" maxlength="6" title="Please enter a valid 6-digit pin code" placeholder="Enter your pincode" required>
+                        <input type="text" name="pincode" id="pincode" class="form-control" name="pincode" pattern="\d{6}" maxlength="6" title="Please enter a valid 6-digit pin code" placeholder="Enter your pincode" required>
                     </div>
+                    <input type="hidden" name="role" id="role" value="{{user_role}}" >
 
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-success btn-lg mt-4 col-3 justify-content-center" style="border-radius: 20px;">Sign Up</button>
