--- a/template/nav.html
+++ b/template/nav.html
@@ -1,79 +1,10 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Skill House Service</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href={{url_for('dashboard')}}>Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav> -->
+{%block extra_css%}
+<link rel="stylesheet" href="../static/css/nav.css">
+{%endblock%}
 
-  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="#">Skill House Service</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav> -->
-
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-    <a class="navbar-brand" href={{url_for('dashboard')}}>Skill House Service</a>
-  {% if 'email' in session %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href={{url_for('login')}}><h4>Skill House Service</h4></a>
+  {% if '_user_id' in session %}
     
     <!-- Toggle button for small screens -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -85,39 +16,53 @@
       <!-- Left-aligned navigation links -->
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href={{url_for('dashboard')}}>Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Summary</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
+        <li class="nav-item">
+          <span class="nav-link" id="search-toggle">Search</span>
         </li>
       </ul>
 
       <!-- Centered search form -->
-      <form class="form-inline mx-auto my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <form class="form-inline mx-auto my-2 my-lg-0 hidden" id="search-box">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <select class="custom-select col-md-4" id="search-select" aria-label="Search in">
+              <option selected>Search in...</option>
+              {% if user.role == 'admin'%}
+              <option value="Categories">Categories</option>
+              <option value="Services">Services</option>
+              <option value="Professionals">Professionals</option>
+              <option value="Customers">Customers</option>
+              {%elif user.role == 'professional'%}
+              <option value="Services">Services</option> 
+              <option value="Customers">Customers</option>
+              {%else%}
+              <option value="Categories">Categories</option>
+              <option value="Services">Services</option>
+              <option value="Professionals">Professionals</option>
+              {%endif%}
+            </select>
+            <input type="text" class="form-control col-md-10" aria-label="Text input with dropdown button" placeholder="Enter the value to search">
+            <button class="btn btn-outline-success my-2 ml-1 my-sm-0" type="submit">Search</button>
+          </div>
+        </div>
       </form>
 
       <!-- Profile image with dropdown on the right -->
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="profileDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img src="static\images\users\penny_gmail_com.jpg" class="rounded-circle" alt="Profile" width="40" height="40">User Name
+            <img src={{user.adminDetails.profilePhotoPath}} class="rounded-circle" alt="Profile" width="40" height="40">
+            <span>
+              &nbsp;{{ user.adminDetails.fname }}&nbsp;({{ user.role }}){% if user.status != 1 %}&#9888;{% endif %}
+          </span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
-            <a class="dropdown-item" href="#">Profile</a>
-            <a class="dropdown-item" href="#">Settings</a>
+            <a class="dropdown-item" href="#">Profile <span class="badge badge-{% if not user.status %}warning{% else %}success{%endif%}">{% if not user.status %}Pending{% else %}Approved{%endif%}</span> </a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href={{url_for('logout')}}>Logout</a>
           </div>
@@ -125,7 +70,7 @@
       </ul>
     </div>
   {% endif %}
-  </nav>
+</nav>
 
 
 
