Finish the summary using chart.js

--- a/static/css/restrict.css
+++ b/static/css/restrict.css
@@ -32,3 +32,10 @@ body {
 .btn-home {
     border-radius: 20px;
 }
+
+.icon {
+    font-size: 100px;
+}
+.text-warning {
+    color: #ffc107 !important;
+}
