--- a/template/nav.html
+++ b/template/nav.html
@@ -19,7 +19,7 @@
           <a class="nav-link" href={{url_for('dashboard')}}>Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Summary</a>
+          <a class="nav-link" href={{url_for('summary')}}>Summary</a>
         </li>
         <li class="nav-item">
           <span class="nav-link" id="search-toggle">Search</span>
