--- a/template/summary.html
+++ b/template/summary.html
@@ -1,7 +1,7 @@
 
 {%extends 'base.html'%}
 {%block title%}
-Home
+Summary
 {%endblock%}
 {%block extra_css%} 
 <link rel="stylesheet" href="../static/css/summary.css">
