--- a/template/customerSearchResults.html
+++ b/template/customerSearchResults.html
@@ -81,6 +81,7 @@
                 <th>Experience</th>
                 <th>Service Name</th>
                 <th>Incentive</th>
+                <th>Ratings(AVG)</th>
                 <th>Action</th>
             </tr>
         </thead>
@@ -97,6 +98,21 @@
                 <td>{{professional.experience}}</td>
                 <td>{{professional.service.name}}</td>
                 <td>{{professional.incentive}}&#8377;</td>
+                <td>{%if professional.reviews%}
+                    {% set avgRating = 0 %}
+                    {% set rating = namespace(totalRating = 0) %}
+                    {% set count = namespace(totalCount = 0) %}
+                    {%for review in professional.reviews%}
+                        {%set rating.totalRating = rating.totalRating + review.rating %}
+                        {% set count.totalCount = count.totalCount + 1 %}
+                    {%endfor%}
+                    {%if count.totalCount != 0%}
+                    {%set avgRating = rating.totalRating / count.totalCount  %}
+                    {{avgRating}}/5
+                    {%else%}
+                    --
+                    {%endif%}
+                {%else%}--{%endif%}</td>
                 <td>
                     <a href={{url_for('requestService', professionalId = professional.id)}} class="btn btn-success">Request Service</a>
                 </td>
