--- a/template/nav.html
+++ b/template/nav.html
@@ -87,7 +87,7 @@
               {%endif%}
             </div>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Profile</a>
+            <a class="dropdown-item" href={{url_for('viewProfile')}}>Profile</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href={{url_for('logout')}}>Logout</a>
           </div>
