--- a/template/searchResults.html
+++ b/template/searchResults.html
@@ -1,7 +1,7 @@
 
 {%extends 'base.html'%}
 {%block title%}
-Home
+Search
 {%endblock%}
 {%block extra_css%} 
 <link rel="stylesheet" href="../static/css/dashboard.css">
